--- a/docs/version-1.30/modules/zh/pages/enterprise.adoc
+++ b/docs/version-1.30/modules/zh/pages/enterprise.adoc
@@ -1,6 +1,7 @@
 include::partial$variables.adoc[]
+
 = Enterprise support
-:revdate: 2025-11-07
+:revdate: 2025-11-10
 :page-revdate: {revdate}
 :sidebar_label: Enterprise
 :sidebar_position: 85
@@ -10,12 +11,18 @@ include::partial$variables.adoc[]
 :doc-type: [explanation]
 :doc-topic: [support]
 
+ifeval::["{build-type}" == "community"]
 These organization(s) provide enterprise support for {project-name}:
 
 [cols="1,1"]
 |===
-| 组织 | 产品
+| Organization | Offering
 
 | link:https://suse.com[SUSE]
-| SUSE 通过 link:https://www.suse.com/products/rancher[SUSE® Rancher Prime] 提供完整的 {project-name} 企业支持。
+| SUSE provides complete {project-name} (as {kw-product-name}) enterprise support with the link:https://www.suse.com/products/rancher/application-collection[SUSE Application Collection].
 |===
+endif::[]
+
+ifeval::["{build-type}" == "product"]
+SUSE provides complete {project-name} enterprise support with the link:https://www.suse.com/products/rancher/application-collection[SUSE Application Collection].
+endif::[]
