--- a/po/kubewarden.pot
+++ b/po/kubewarden.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-11-07 14:55+0100\n"
+"POT-Creation-Date: 2025-11-07 15:22+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2090,25 +2090,35 @@ msgid ""
 msgstr ""
 
 #. type: Title =
-#: docs/version-1.30/modules/en/pages/enterprise.adoc:2
+#: docs/version-1.30/modules/en/pages/enterprise.adoc:3
 #, no-wrap
 msgid "Enterprise support"
 msgstr ""
 
 #. type: Plain text
-#: docs/version-1.30/modules/en/pages/enterprise.adoc:14
+#: docs/version-1.30/modules/en/pages/enterprise.adoc:16
 msgid "These organization(s) provide enterprise support for {project-name}:"
 msgstr ""
 
 #. type: Table
-#: docs/version-1.30/modules/en/pages/enterprise.adoc:21
+#: docs/version-1.30/modules/en/pages/enterprise.adoc:23
 #, no-wrap
 msgid ""
 "| Organization | Offering\n"
 "\n"
 "| link:https://suse.com[SUSE]\n"
-"| SUSE provides complete {project-name} enterprise support with "
-"link:https://www.suse.com/products/rancher[SUSE® Rancher Prime].\n"
+"| SUSE provides complete {project-name} (as {kw-product-name}) enterprise "
+"support with the "
+"link:https://www.suse.com/products/rancher/application-collection[SUSE "
+"Application Collection].\n"
+msgstr ""
+
+#. type: Plain text
+#: docs/version-1.30/modules/en/pages/enterprise.adoc:28
+msgid ""
+"SUSE provides complete {project-name} enterprise support with the "
+"link:https://www.suse.com/products/rancher/application-collection[SUSE "
+"Application Collection]."
 msgstr ""
 
 #. type: Title =
