--- a/po/zh.po
+++ b/po/zh.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-11-07 14:55+0100\n"
+"POT-Creation-Date: 2025-11-07 15:22+0100\n"
 "PO-Revision-Date: 2024-07-15 10:00+0000\n"
 "Last-Translator: Gemini Code Assist\n"
 "Language-Team: none\n"
@@ -2386,29 +2386,54 @@ msgid ""
 msgstr ""
 
 #. type: Title =
-#: docs/version-1.30/modules/en/pages/enterprise.adoc:2
+#: docs/version-1.30/modules/en/pages/enterprise.adoc:3
 #, no-wrap
 msgid "Enterprise support"
 msgstr ""
 
 #. type: Plain text
-#: docs/version-1.30/modules/en/pages/enterprise.adoc:14
+#: docs/version-1.30/modules/en/pages/enterprise.adoc:16
 msgid "These organization(s) provide enterprise support for {project-name}:"
 msgstr ""
 
 #. type: Table
-#: docs/version-1.30/modules/en/pages/enterprise.adoc:21
-#, no-wrap
+#: docs/version-1.30/modules/en/pages/enterprise.adoc:23
+#, fuzzy, no-wrap
+#| msgid ""
+#| "| Organization | Offering\n"
+#| "\n"
+#| "| link:https://suse.com[SUSE]\n"
+#| "| SUSE provides complete {project-name} enterprise support with link:https://www.suse.com/products/rancher[SUSE® Rancher Prime].\n"
 msgid ""
 "| Organization | Offering\n"
 "\n"
 "| link:https://suse.com[SUSE]\n"
-"| SUSE provides complete {project-name} enterprise support with link:https://www.suse.com/products/rancher[SUSE® Rancher Prime].\n"
+"| SUSE provides complete {project-name} (as {kw-product-name}) enterprise support with the link:https://www.suse.com/products/rancher/application-collection[SUSE Application Collection].\n"
 msgstr ""
 "| 组织 | 产品\n"
 "\n"
 "| link:https://suse.com[SUSE]\n"
 "| SUSE 通过 link:https://www.suse.com/products/rancher[SUSE® Rancher Prime] 提供完整的 {project-name} 企业支持。\n"
+
+#. type: Plain text
+#: docs/version-1.30/modules/en/pages/enterprise.adoc:28
+#, fuzzy
+#| msgid ""
+#| "| Organization | Offering\n"
+#| "\n"
+#| "| link:https://suse.com[SUSE]\n"
+#| "| SUSE provides complete {project-name} enterprise support with "
+#| "link:https://www.suse.com/products/rancher[SUSE® Rancher Prime].\n"
+msgid ""
+"SUSE provides complete {project-name} enterprise support with the "
+"link:https://www.suse.com/products/rancher/application-collection[SUSE "
+"Application Collection]."
+msgstr ""
+"| 组织 | 产品\n"
+"\n"
+"| link:https://suse.com[SUSE]\n"
+"| SUSE 通过 link:https://www.suse.com/products/rancher[SUSE® Rancher Prime] "
+"提供完整的 {project-name} 企业支持。\n"
 
 #. type: Title =
 #: docs/version-1.30/modules/en/pages/glossary.adoc:2
