--- a/docs/version-1.30/modules/en/pages/introduction.adoc
+++ b/docs/version-1.30/modules/en/pages/introduction.adoc
@@ -2,6 +2,7 @@ include::partial$variables.adoc[]
 = What is {project-name}?
 :revdate: 2025-11-03
 :page-revdate: {revdate}
+:page-languages: [en, es, de, zh]
 :description: Introducing {project-name}, a SUSE® Rancher Prime product.
 :doc-persona: ["kubewarden-all"]
 :doc-topic: ["introduction"]
